# acp-demo

./: .env.example  .gitignore  README.md  pyproject.toml
course_generation_agent/: __init__.py  agent.py  client.py
